--- a/menu.html
+++ b/menu.html
@@ -333,16 +333,7 @@
                         <i class="fa-solid fa-xmark"></i>
                     </div>
                 </header>
-                <ul class="cart__list">
-                    <li><a href="">
-                        <div class="cart__imgWrap">
-                            <img src="./assets/img/menu/BM1.jpg" alt="">
-                        </div>
-                        <div class="cart__info">
-                            <h4 class="cart__info-title">hi</h4>
-                            <p class="cart__info-value">124.000đ</p>
-                        </div>
-                    </a></li>                    
+                <ul class="cart__list">               
                                     
                 </ul>
 
@@ -411,7 +402,7 @@
 
 
     <script src="./assets/js/base.js"></script>
-    <script src="./assets/js/menu.js"></script>
+    <script src="./assets/js/menu.js" type="module"></script>
     <script src="./assets/js/sidebarCart.js"></script>
 </body>
 </html>
