update: add items to cart, create: badge in btn open Cart

--- a/menu.html
+++ b/menu.html
@@ -321,8 +321,16 @@
             </div>
         </div>
         <!-- cart -->
-        <div class="btn__cart">
-            <i class="fa-solid fa-cart-shopping" id="cart__logo"></i>
+        
+        <div class="btn__cart-wrap">
+            <div class="btn__cart">
+                <i class="fa-solid fa-cart-shopping" id="cart__logo"></i>
+            </div>
+            <div class="cart__badge">
+                <i class="fa-solid fa-star">
+                    <p class="count">1</p>
+                </i>
+            </div>
         </div>
 
         <div class="cart__sidebar">
