update shop vs story
chỉnh sửa ảnh vv...

--- a/story1.html
+++ b/story1.html
@@ -113,7 +113,7 @@
             
                 <h3>
                     Chuyện cà phê và nhà 
-                    <h1 style="background: orange; width: 40px; height: 5px; margin-top: -20px; margin-bottom: 10px ;margin-left: 700px;">
+                    <h1 style="background: orange; width: 40px; height: 5px; margin-top: -20px; margin-bottom: 10px ;margin-left: 630px;">
                     </h1>
                     <!-- <hr style="border: 4px solid rgb(212, 120, 14); width:50px; margin-top: 15px; margin-left: 90px; border-radius: 10px;"> -->
                 </h3>
@@ -137,7 +137,7 @@
              <div class="content2">
                 <div class="content2__left">
                     <div>
-                        <img src="./assets/img/Chuyện nhà/Ảnh chụp màn hình 2022-03-15 212503.png" alt="">
+                        <img src="./assets/img/Chuyện nhà/left_img_1.png" alt="">
                     </div>
                     <div >
                        <a href=""> NĂM MỚI , UỐNG " KHỞI ĐẦU SUNG"- NHẬN LÌ XÌ KHỦNG TẠI THE COFFE HOUSE </a>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="content2__right">
                     <div>
-                        <img src="./assets/img/Chuyện nhà/Ảnh chụp màn hình 2022-03-16 092945.png" alt="">
+                        <img src="./assets/img/Chuyện nhà/right_img_1.png" alt="">
                     </div>
                     <div>
                         
@@ -163,7 +163,7 @@
             </div> 
             <div class="content3">
                 <div class="content3__left">
-                    <img src="./assets/img/Chuyện nhà/photo_2021-11-25_09-31-52_52c6f13fcc06433db2362281059d1c09.png" alt="">
+                    <img src="./assets/img/Chuyện nhà/coffeholic_left.png" alt="">
 
                 </div>
                 <div class="content3__right">
@@ -171,7 +171,7 @@
                         <h4> Coffeholic</h4>
                     </div>
                     <div class="content3__right__warp">
-                        <img src="./assets/img/Chuyện nhà/thecoffehouse_ca_phe_01_b4adbd88db6e4ca3b7c2c5934d1a1ed9_master.webp" alt=""> 
+                        <img src="./assets/img/Chuyện nhà/coffeholic_1.png" alt=""> 
                         <div  class="content3__right__warp1">
                             <a  href="">CÁCH NHẬN BIẾT HƯƠNG VỊ CÀ PHÊ ROBUSTA NGUYÊN CHẤT DỄ DÀNG NHẤT</a>
                              <h5> 11/03/2022</h5>
@@ -181,7 +181,7 @@
                         </div>
                     </div>                   
                     <div class="content3__right__warp">
-                        <img src="./assets/img/Chuyện nhà/thecoffeehouse_caphe_7_db8def55acbf426ea725921529f6f01e_master.png" alt="">
+                        <img src="./assets/img/Chuyện nhà/coffeholic_2.png" alt="">
                         <div  class="content3__right__warp1">
                             <a href="">BẬT MÍ NHIỆT ĐỘ LÝ TƯỞNG ĐỂ PHA CÀ PHÊ NGON, ĐẬM ĐÀ HƯƠNG VỊ</a>
                              <h5> 07/03/2022</h5>
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                     <div class="content3__right__warp">
-                        <img src="./assets/img/Chuyện nhà/thecoffeehouse_caphe_2_aacf152c62064c40ab804a66ffc706d1_master.png" alt="">
+                        <img src="./assets/img/Chuyện nhà/coffeholic_3.png" alt="">
                         <div  class="content3__right__warp1">
                             <a href="">CÁCH PHA CÀ PHÊ PHIN THƠM NGON TRÒN VỊ</a>
                              <h5> 04/03/2022</h5>
@@ -219,7 +219,7 @@
                         </h4>
                     </div>
                     <div class="content4__left__warp">
-                        <img src="./assets/img/Chuyện nhà/thecoffeehouse_amtusa_07_e9d40a62b6524ed7b5c3232c5031a493_master.png" alt=""> 
+                        <img src="./assets/img/Chuyện nhà/teaholic_left_1.png" alt=""> 
                         <div  class="content4__left__warp1">
                             <a href="">CÁCH KHAI ẤM TỬ SA ĐỂ GỢI VỊ NGON CỦA TRÀ</a>
                              <h5> 09/03/2022</h5>
@@ -230,7 +230,7 @@
                         </div>
                     </div>         
                     <div class="content4__left__warp">
-                        <img src="./assets/img/Chuyện nhà/tearoma02079_6bd7922b58dc41de84a3ff20913f96f0_master.png" alt=""> 
+                        <img src="./assets/img/Chuyện nhà/teaholic_left_2.png" alt=""> 
                         <div  class="content4__left__warp1">
                             <a href="">THƯỞNG TRÀ THEO TỪNG MÙA TRONG NĂM</a>
                              <h5> 02/03/2022</h5>
@@ -239,7 +239,7 @@
                         </div>
                     </div>       
                     <div class="content4__left__warp">
-                        <img src="./assets/img/Chuyện nhà/_downloader.png" alt=""> 
+                        <img src="./assets/img/Chuyện nhà/teaholic_left_3.png" alt=""> 
                         <div  class="content4__left__warp1">
                             <a href="">KHÁC BIỆT CƠ BẢN GIỮA TRÀ XANH VÀ TRÀ ĐEN</a>
                              <h5> 19/01/2022</h5>
@@ -258,20 +258,20 @@
                  <!-- content4 -right -->   
                 <div class="content4__right">
                     <div>
-                        <img src="./assets/img/Chuyện nhà/teaholic_3f320cac87814da0912f45ccfebd4e0e.jpg" alt="">
+                        <img src="./assets/img/Chuyện nhà/teaholic_right.jpg" alt="">
                     </div>
                 </div>
             </div>
             <div class="content5">
                 <div class="content5__left">
-                    <img src="./assets/img/Chuyện nhà/blog_94b05e56224646bc86c6e72c73ac4258.png" alt="">
+                    <img src="./assets/img/Chuyện nhà/blog_left.png" alt="">
                 </div>
                 <div class="content5__right">
                     <div>
                         <h4> Blog</h4>
                     </div>
                     <div class="content5__right__warp">
-                        <img src="./assets/img/Chuyện nhà/thecoffeehouse_caphe_7_db8def55acbf426ea725921529f6f01e_master.png" alt="">
+                        <img src="./assets/img/Chuyện nhà/blog_img_1.png" alt="">
                         <div  class="content5__right__warp1">
                             <a href="">LỄ TÌNH NHÂN, CÙNG CRUSH ĐI ĐÂU?</a>
                              <h6 style="display: inline-block; margin: 40px 0px 10px -360px; color: rgba(0, 0, 0, 0.45);;"> 14/02/2022</h6>
@@ -282,7 +282,7 @@
                         </div>
                     </div>
                     <div class="content5__right__warp">
-                        <img src="./assets/img/Chuyện nhà/hn-le-thanh-nghi2_d161f1f7755249cba30f2ecc7a591e47_master_1bbacee733084b93a400eaa54762bf12_master.png" alt="">
+                        <img src="./assets/img/Chuyện nhà/blog_img_2.png" alt="">
                         <div  class="content5__right__warp1">
                             <a href="">THE COFFEE HOUSE - QUÁN CÀ PHÊ LÝ TƯỞNG ĐỂ HỘI HỌP BẠN BÈ MÙA TẾT NÀY</a>
                              <h5> 01/02/2022</h5>
@@ -293,7 +293,7 @@
                         </div>
                     </div>  
                     <div class="content5__right__warp">
-                        <img src="./assets/img/Chuyện nhà/tch206857_stacking_d4325b7f7a5945d7b2abee4eb7ad51d5_master.png" alt="">
+                        <img src="./assets/img/Chuyện nhà/blog_img_3.png" alt="">
                         <div  class="content5__right__warp1">
                             <a href="">CHAI FRESH LUÔN BÊN BẠN TRONG MỌI KHOẢNH KHẮC</a>
                              <h5> 24/1/2022</h5>
